# cache

ideal/: CMakeLists.txt  makefile
ideal/include/: cache.hpp
ideal/src/: main.cpp
ideal/tests/: test.cpp
lfu/: CMakeLists.txt  makefile
lfu/include/: cache.hpp
lfu/src/: main.cpp
lfu/tests/: test.cpp
lru/: makefile
lru/include/: cache.hpp
lru/src/: main.cpp
lru/tests/: main.cpp
